3 types of lights supported number of n lights

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ project(vb01)
 include_directories(/usr/include/GLFW)
 include_directories(/usr/include/glm)
 include_directories(/usr/include/glad)
+include_directories(/usr/include/assimp)
 
 set(CMAKE_BUILD_TYPE Debug)
 set(math quaternion.cpp vector.cpp)
@@ -13,3 +14,4 @@ link_directories(/usr/lib)
 add_executable(vb01 main.cpp ${math} ${render})
 target_link_libraries(vb01 glfw)
 target_link_libraries(vb01 glad)
+target_link_libraries(vb01 assimp)
