implemented overlays and text, need depth configuration

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,15 +5,18 @@ include_directories(/usr/include/GLFW)
 include_directories(/usr/include/glad)
 include_directories(/usr/include/glm)
 include_directories(/usr/include/assimp)
+include_directories(/usr/include/freetype2)
 
 link_directories(/usr/lib/)
 
 set(CMAKE_BUILD_TYPE Debug)
+set(gui text.cpp rectangle.cpp)
 set(utils util.cpp)
 set(math quaternion.cpp vector.cpp)
 set(render waterPlane.cpp particleEmitter.cpp camera.cpp light.cpp material.cpp mesh.cpp model.cpp node.cpp quad.cpp box.cpp root.cpp shader.cpp texture.cpp)
 
-add_executable(vb01 main.cpp ${render} ${math} ${utils})
+add_executable(vb01 main.cpp ${render} ${math} ${utils} ${gui})
 target_link_libraries(vb01 glfw)
 target_link_libraries(vb01 glad)
 target_link_libraries(vb01 assimp)
+target_link_libraries(vb01 freetype)
