readable .vb format

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,9 +14,10 @@ set(gui text.cpp rectangle.cpp)
 set(utils util.cpp)
 set(math quaternion.cpp vector.cpp matrix.cpp ray.cpp)
 set(render waterPlane.cpp particleEmitter.cpp camera.cpp light.cpp material.cpp mesh.cpp model.cpp node.cpp quad.cpp box.cpp root.cpp shader.cpp texture.cpp)
+set(anim animationChannel.cpp animation.cpp)
 set(armature skeleton.cpp bone.cpp)
 
-add_library(vb01 SHARED main.cpp ${render} ${math} ${utils} ${gui} ${armature})
+add_library(vb01 SHARED main.cpp ${render} ${math} ${utils} ${gui} ${armature} ${anim})
 target_link_libraries(vb01 glfw)
 target_link_libraries(vb01 glad)
 target_link_libraries(vb01 assimp)
