--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ include_directories(/usr/include/glad)
 include_directories(/usr/include/glm)
 include_directories(/usr/include/assimp)
 include_directories(/usr/include/freetype2)
+include_directories(/usr/include/cppunit)
 
 link_directories(/usr/lib/)
 
@@ -17,9 +18,17 @@ set(render particleEmitter.cpp camera.cpp light.cpp material.cpp mesh.cpp model.
 set(model modelReader.cpp assimpModelReader.cpp vbModelReader.cpp)
 set(anim animationController.cpp animationChannel.cpp animation.cpp)
 set(armature skeleton.cpp bone.cpp)
+set(library ${render} ${math} ${model} ${utils} ${gui} ${armature} ${anim})
+set(test cameraTest.cpp)
 
-add_library(vb01 SHARED main.cpp ${render} ${math} ${model} ${utils} ${gui} ${armature} ${anim})
+add_library(vb01 SHARED ${library})
 target_link_libraries(vb01 glfw)
 target_link_libraries(vb01 glad)
 target_link_libraries(vb01 assimp)
 target_link_libraries(vb01 freetype)
+add_executable(vb01Tests main.cpp ${test} ${library})
+target_link_libraries(vb01Tests cppunit)
+target_link_libraries(vb01Tests glfw)
+target_link_libraries(vb01Tests glad)
+target_link_libraries(vb01Tests assimp)
+target_link_libraries(vb01Tests freetype)
