--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,10 +10,10 @@ include_directories(/usr/include/freetype2)
 link_directories(/usr/lib/)
 
 set(CMAKE_BUILD_TYPE Debug)
-set(gui text.cpp rectangle.cpp)
+set(gui text.cpp)
 set(utils util.cpp)
 set(math quaternion.cpp vector.cpp matrix.cpp ray.cpp)
-set(render waterPlane.cpp particleEmitter.cpp camera.cpp light.cpp material.cpp mesh.cpp model.cpp node.cpp quad.cpp box.cpp root.cpp shader.cpp texture.cpp)
+set(render particleEmitter.cpp camera.cpp light.cpp material.cpp mesh.cpp model.cpp node.cpp quad.cpp box.cpp root.cpp shader.cpp texture.cpp)
 set(model modelReader.cpp assimpModelReader.cpp vbModelReader.cpp)
 set(anim animationController.cpp  animationChannel.cpp animation.cpp)
 set(armature skeleton.cpp bone.cpp)
