animation channel test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,7 +29,8 @@ target_link_libraries(vb01 freetype)
 set(renderTest nodeTest.cpp cameraTest.cpp)
 set(armatureTest boneTest.cpp)
 set(modelTest vbModelReaderTest.cpp)
-set(test ${library} ${renderTest} ${armatureTest} ${modelTest})
+set(animationTest animationChannelTest.cpp)
+set(test ${library} ${renderTest} ${armatureTest} ${modelTest} ${animationTest})
 
 add_executable(vb01Tests main.cpp ${test})
 target_link_libraries(vb01Tests cppunit)
