beginning of IK test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,7 +17,7 @@ set(math quaternion.cpp vector.cpp matrix.cpp ray.cpp)
 set(render particleEmitter.cpp camera.cpp light.cpp material.cpp mesh.cpp model.cpp node.cpp quad.cpp box.cpp root.cpp shader.cpp texture.cpp)
 set(model modelReader.cpp assimpModelReader.cpp vbModelReader.cpp)
 set(anim animationController.cpp animationChannel.cpp animation.cpp)
-set(armature skeleton.cpp bone.cpp)
+set(armature skeleton.cpp bone.cpp ikSolver.cpp)
 set(library ${render} ${math} ${model} ${utils} ${gui} ${armature} ${anim})
 
 add_library(vb01 SHARED ${library})
@@ -27,7 +27,7 @@ target_link_libraries(vb01 assimp)
 target_link_libraries(vb01 freetype)
 
 set(renderTest nodeTest.cpp cameraTest.cpp shaderTest.cpp particleEmitterTest.cpp)
-set(armatureTest boneTest.cpp)
+set(armatureTest boneTest.cpp ikSolverTest.cpp)
 set(modelTest vbModelReaderTest.cpp)
 set(animationTest animationChannelTest.cpp)
 set(test ${library} ${renderTest} ${armatureTest} ${modelTest} ${animationTest})
