--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,7 @@ set(utils util.cpp)
 set(math quaternion.cpp vector.cpp matrix.cpp ray.cpp)
 set(render particleEmitter.cpp camera.cpp light.cpp material.cpp mesh.cpp model.cpp node.cpp quad.cpp box.cpp root.cpp shader.cpp texture.cpp)
 set(model modelReader.cpp assimpModelReader.cpp vbModelReader.cpp)
-set(anim animationController.cpp animationChannel.cpp animation.cpp)
+set(anim animationController.cpp animationChannel.cpp animation.cpp animatable.cpp)
 set(armature skeleton.cpp bone.cpp ikSolver.cpp)
 set(library ${render} ${math} ${model} ${utils} ${gui} ${armature} ${assetManager} ${anim})
 
