--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 2.9)
+cmake_minimum_required(VERSION 3.3)
 project(vb01)
 
 set(CMAKE_BUILD_TYPE Debug)
@@ -17,39 +17,38 @@ set(RENDER particleEmitter.cpp camera.cpp light.cpp material.cpp mesh.cpp model.
 set(MODEL modelReader.cpp assimpModelReader.cpp vbModelReader.cpp)
 set(ANIM animationController.cpp animationChannel.cpp animation.cpp animatable.h keyframeChannel.cpp driver.cpp)
 set(ARMATURE skeleton.cpp bone.cpp ikSolver.cpp)
-set(LIB_SRC ${RENDER} ${MATH} ${MODEL} ${UTILS} ${GUI} ${ARMATURE} ${ASSET_MANAGER} ${ANIM})
-
-#include_directories(${INCLUDE_DIR})
-
-#include_directories(/usr/include/GLFW)
-#include_directories(/usr/include/glm)
-#include_directories(/usr/include/assimp)
-#include_directories(/usr/include/freetype2)
-#include_directories(/usr/include/cppunit)
-
-#link_directories(/usr/lib/)
+set(LIB_SRC glad.c ${RENDER} ${MATH} ${MODEL} ${UTILS} ${GUI} ${ARMATURE} ${ASSET_MANAGER} ${ANIM})
 
 include_directories(${STB_HEADERS})
-
-find_library(GLAD glad external/glad)
-include_directories(external/glad/include/glad)
-
-find_library(GLFW glfw3 external/glfw/src)
-include_directories(external/glfw/include/GLFW)
 
 include_directories(external/glm)
 include_directories(external/glm/glm)
 
-find_library(FREETYPE freetype external/freetype/objs/.lib)
-include_directories(external/freetype/include)
+add_library(${PROJECT_NAME} SHARED ${LIB_SRC})
 
-find_library(ASSIMP assimp external/assimp/build/bin)
-include_directories(external/assimp/include/assimp)
+set(GLFW_DIR external/glfw)
+set(FREETYPE_DIR external/freetype)
+set(ASSIMP_DIR external/assimp)
+set(CPPUNIT_DIR external/CppUnit)
 
-set(DEPS ${GLAD} ${GLFW} ${ASSIMP} ${FREETYPE} ${CMAKE_DL_LIBS})
+add_subdirectory(${GLFW_DIR})
+target_include_directories(${PROJECT_NAME} PUBLIC ${GLFW_DIR}/include/GLFW)
+target_link_directories(${PROJECT_NAME} PUBLIC ${GLFW_DIR})
 
-add_library(vb01 SHARED ${LIB_SRC})
-target_link_libraries(vb01 ${DEPS})
+add_subdirectory(${ASSIMP_DIR})
+target_include_directories(${PROJECT_NAME} PUBLIC ${ASSIMP_DIR}/include/assimp)
+target_link_directories(${PROJECT_NAME} PUBLIC ${ASSIMP_DIR}/bin)
+
+execute_process(COMMAND ${FREETYPE_DIR}/autogen.sh)
+execute_process(COMMAND ${FREETYPE_DIR}/configure)
+execute_process(COMMAND make -c ${FREETYPE_DIR})
+add_subdirectory(${FREETYPE_DIR})
+target_include_directories(${PROJECT_NAME} PUBLIC ${FREETYPE_DIR}/include)
+target_link_directories(${PROJECT_NAME} PUBLIC ${FREETYPE_DIR}/objs/.lib)
+
+set(DEPS glfw assimp freetype ${CMAKE_DL_LIBS})
+
+target_link_libraries(${PROJECT_NAME} ${DEPS})
 
 set(RENDER_TEST nodeTest.cpp cameraTest.cpp shaderTest.cpp particleEmitterTest.cpp)
 set(ARMATURE_TEST boneTest.cpp ikSolverTest.cpp)
@@ -58,4 +57,10 @@ set(ANIMATION_TEST animationChannelTest.cpp)
 set(TEST_SRC main.cpp ${LIB_SRC} ${RENDER_TEST} ${ARMATURE_TEST} ${MODEL_TEST} ${ANIMATION_TEST})
 
 add_executable(vb01Tests ${TEST_SRC})
-target_link_libraries(vb01Tests ${DEPS} vb01 cppunit)
+
+execute_process(COMMAND ${CPPUNIT_DIR}/autogen.sh)
+add_subdirectory(${CPPUNIT_DIR})
+target_include_directories(${PROJECT_NAME} PUBLIC ${CPPUNIT_DIR}/include)
+target_link_directories(${PROJECT_NAME} PUBLIC ${CPPUNIT_DIR})
+
+target_link_libraries(vb01Tests ${PROJECT_NAME} ${DEPS} cppunit)
