--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ set(CMAKE_BUILD_TYPE Debug)
 set(STB_HEADERS external/stb/)
 #add_subdirectory(src/)
 set(INCLUDE_DIR include/)
-SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -pthread")
+SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -pthread -pedantic")
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
 cmake_policy(SET CMP0015 NEW)
@@ -32,19 +32,36 @@ set(ASSIMP_DIR external/assimp)
 set(CPPUNIT_DIR external/CppUnit)
 
 add_subdirectory(${GLFW_DIR})
+if(UNIX)
+	set(GLFW_LIB_DIR ${GLFW_DIR})
+elseif(WIN32)
+	set(GLFW_LIB_DIR ${GLFW_DIR}/src/Debug)
+endif()
 target_include_directories(${PROJECT_NAME} PUBLIC ${GLFW_DIR}/include/GLFW)
-target_link_directories(${PROJECT_NAME} PUBLIC ${GLFW_DIR})
+target_link_directories(${PROJECT_NAME} PUBLIC ${GLFW_LIB_DIR})
 
 add_subdirectory(${ASSIMP_DIR})
+if(UNIX)
+	set(ASSIMP_LIB_DIR ${ASSIMP_DIR}/bin)
+elseif(WIN32)
+	set(ASSIMP_LIB_DIR ${ASSIMP_DIR}/bin/Debug)
+endif()
 target_include_directories(${PROJECT_NAME} PUBLIC ${ASSIMP_DIR}/include/assimp)
-target_link_directories(${PROJECT_NAME} PUBLIC ${ASSIMP_DIR}/bin)
+target_link_directories(${PROJECT_NAME} PUBLIC ${ASSIMP_LIB_DIR})
 
-execute_process(COMMAND ${FREETYPE_DIR}/autogen.sh)
-execute_process(COMMAND ${FREETYPE_DIR}/configure)
-execute_process(COMMAND make -c ${FREETYPE_DIR})
+if(UNIX)
+	execute_process(COMMAND ${FREETYPE_DIR}/autogen.sh)
+	execute_process(COMMAND ${FREETYPE_DIR}/configure)
+	execute_process(COMMAND make -c ${FREETYPE_DIR})
+	set(FREETYPE_LIB_DIR ${FREETYPE_DIR}/objs/.lib)
+elseif(WIN32)
+	execute_process(COMMAND cmake -E build_directory build)
+	execute_process(COMMAND cmake -E chdir build cmake ..)
+	set(FREETYPE_LIB_DIR ${FREETYPE_DIR}/build/Debug)
+endif()
 add_subdirectory(${FREETYPE_DIR})
 target_include_directories(${PROJECT_NAME} PUBLIC ${FREETYPE_DIR}/include)
-target_link_directories(${PROJECT_NAME} PUBLIC ${FREETYPE_DIR}/objs/.lib)
+target_link_directories(${PROJECT_NAME} PUBLIC ${FREETYPE_LIB_DIR})
 
 set(DEPS glfw assimp freetype ${CMAKE_DL_LIBS})
 
@@ -58,9 +75,14 @@ set(TEST_SRC main.cpp ${LIB_SRC} ${RENDER_TEST} ${ARMATURE_TEST} ${MODEL_TEST} $
 
 add_executable(vb01Tests ${TEST_SRC})
 
-execute_process(COMMAND ${CPPUNIT_DIR}/autogen.sh)
+if(UNIX)
+	execute_process(COMMAND ${CPPUNIT_DIR}/autogen.sh)
+	set(CPPUNIT_LIB_DIR ${CPPUNIT_DIR})
+elseif(WIN32)
+	set(CPPUNIT_LIB_DIR ${CPPUNIT_DIR}/Debug)
+endif()
 add_subdirectory(${CPPUNIT_DIR})
 target_include_directories(${PROJECT_NAME} PUBLIC ${CPPUNIT_DIR}/include)
-target_link_directories(${PROJECT_NAME} PUBLIC ${CPPUNIT_DIR})
+target_link_directories(${PROJECT_NAME} PUBLIC ${CPPUNIT_LIB_DIR})
 
 target_link_libraries(vb01Tests ${PROJECT_NAME} ${DEPS} cppunit)
