Cppunit is used as installed software

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ set(CMAKE_BUILD_TYPE Debug)
 set(STB_HEADERS external/stb/)
 set(INCLUDE_DIR include/)
 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread -pedantic")
+set(BUILD_SHARED_LIBS OFF)
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
 cmake_policy(SET CMP0015 NEW)
@@ -22,6 +23,14 @@ include_directories(${STB_HEADERS})
 
 include_directories(external/glm)
 include_directories(external/glm/glm)
+
+if(UNIX)
+	include_directories(/usr/include/cppunit)
+	link_directories(/usr/lib)
+elseif(WIN32)
+	include_directories(C:/Program\ Files\ \(x86\)/cppunit/include)
+	link_directories(C:/Program\ Files\ \(x86\)/cppunit/lib)
+endif()
 
 add_library(${PROJECT_NAME} SHARED ${LIB_SRC})
 
@@ -59,7 +68,7 @@ add_subdirectory(${FREETYPE_DIR})
 target_include_directories(${PROJECT_NAME} PUBLIC ${FREETYPE_DIR}/include)
 target_link_directories(${PROJECT_NAME} PUBLIC ${FREETYPE_LIB_DIR})
 
-set(DEPS glfw3 assimp freetype ${CMAKE_DL_LIBS})
+set(DEPS glfw assimp freetype ${CMAKE_DL_LIBS})
 
 target_link_libraries(${PROJECT_NAME} ${DEPS})
 
@@ -70,14 +79,4 @@ set(ANIMATION_TEST animationChannelTest.cpp)
 set(TEST_SRC main.cpp ${LIB_SRC} ${RENDER_TEST} ${ARMATURE_TEST} ${MODEL_TEST} ${ANIMATION_TEST})
 
 add_executable(vb01Tests ${TEST_SRC})
-
-if(UNIX)
-	set(CPPUNIT_LIB_DIR build/${CPPUNIT_DIR})
-elseif(WIN32)
-	set(CPPUNIT_LIB_DIR build/${CPPUNIT_DIR}/Debug)
-endif()
-add_subdirectory(${CPPUNIT_DIR})
-target_include_directories(${PROJECT_NAME} PUBLIC ${CPPUNIT_DIR}/include)
-target_link_directories(${PROJECT_NAME} PUBLIC ${CPPUNIT_LIB_DIR})
-
 target_link_libraries(vb01Tests ${PROJECT_NAME} ${DEPS} cppunit)
