test building is optional

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,8 +4,9 @@ project(vb01)
 set(CMAKE_BUILD_TYPE Debug)
 set(STB_HEADERS external/stb/)
 set(INCLUDE_DIR include/)
-SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread -pedantic")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread -pedantic")
 set(BUILD_SHARED_LIBS OFF)
+set(BUILD_TESTS OFF)
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
 cmake_policy(SET CMP0015 NEW)
@@ -23,14 +24,6 @@ include_directories(${STB_HEADERS})
 
 include_directories(external/glm)
 include_directories(external/glm/glm)
-
-if(UNIX)
-	include_directories(/usr/include/cppunit)
-	link_directories(/usr/lib)
-elseif(WIN32)
-	include_directories(C:/Program\ Files\ \(x86\)/cppunit/include)
-	link_directories(C:/Program\ Files\ \(x86\)/cppunit/lib)
-endif()
 
 add_library(${PROJECT_NAME} SHARED ${LIB_SRC})
 
@@ -72,11 +65,21 @@ set(DEPS glfw assimp freetype ${CMAKE_DL_LIBS})
 
 target_link_libraries(${PROJECT_NAME} ${DEPS})
 
-set(RENDER_TEST nodeTest.cpp cameraTest.cpp shaderTest.cpp particleEmitterTest.cpp)
-set(ARMATURE_TEST boneTest.cpp ikSolverTest.cpp)
-set(MODEL_TEST vbModelReaderTest.cpp)
-set(ANIMATION_TEST animationChannelTest.cpp)
-set(TEST_SRC main.cpp ${LIB_SRC} ${RENDER_TEST} ${ARMATURE_TEST} ${MODEL_TEST} ${ANIMATION_TEST})
-
-add_executable(vb01Tests ${TEST_SRC})
-target_link_libraries(vb01Tests ${PROJECT_NAME} ${DEPS} cppunit)
+if(BUILD_TESTS)
+	if(UNIX)
+		include_directories(/usr/include/cppunit)
+		link_directories(/usr/lib)
+	elseif(WIN32)
+		include_directories(C:/Program\ Files\ \(x86\)/cppunit/include)
+		link_directories(C:/Program\ Files\ \(x86\)/cppunit/lib)
+	endif()
+	
+	set(RENDER_TEST nodeTest.cpp cameraTest.cpp shaderTest.cpp particleEmitterTest.cpp)
+	set(ARMATURE_TEST boneTest.cpp ikSolverTest.cpp)
+	set(MODEL_TEST vbModelReaderTest.cpp)
+	set(ANIMATION_TEST animationChannelTest.cpp)
+	set(TEST_SRC main.cpp ${LIB_SRC} ${RENDER_TEST} ${ARMATURE_TEST} ${MODEL_TEST} ${ANIMATION_TEST})
+	
+	add_executable(vb01Tests ${TEST_SRC})
+	target_link_libraries(vb01Tests ${PROJECT_NAME} ${DEPS} cppunit)
+endif()
