--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ set(STB_HEADERS external/stb/)
 set(INCLUDE_DIR include/)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread -pedantic")
 set(BUILD_SHARED_LIBS OFF)
-set(BUILD_TESTS OFF)
+set(BUILD_TESTS ON)
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
 cmake_policy(SET CMP0015 NEW)
@@ -32,31 +32,23 @@ set(FREETYPE_DIR external/freetype)
 set(ASSIMP_DIR external/assimp)
 set(CPPUNIT_DIR external/CppUnit)
 
-add_subdirectory(${GLFW_DIR})
 if(UNIX)
 	message("Building for UNIX")
-	set(GLFW_LIB_DIR build/${GLFW_DIR}/src)
 elseif(WIN32)
 	message("Building for Windows")
-	set(GLFW_LIB_DIR build/${GLFW_DIR}/src/Debug)
 endif()
+
+add_subdirectory(${GLFW_DIR})
+set(GLFW_LIB_DIR build/${GLFW_DIR}/src)
 target_include_directories(${PROJECT_NAME} PUBLIC ${GLFW_DIR}/include/GLFW)
 target_link_directories(${PROJECT_NAME} PUBLIC ${GLFW_LIB_DIR})
 
 add_subdirectory(${ASSIMP_DIR})
-if(UNIX)
-	set(ASSIMP_LIB_DIR build/${ASSIMP_DIR}/lib)
-elseif(WIN32)
-	set(ASSIMP_LIB_DIR build/${ASSIMP_DIR}/lib/Debug)
-endif()
+set(ASSIMP_LIB_DIR build/${ASSIMP_DIR}/lib)
 target_include_directories(${PROJECT_NAME} PUBLIC ${ASSIMP_DIR}/include/assimp)
 target_link_directories(${PROJECT_NAME} PUBLIC ${ASSIMP_LIB_DIR})
 
-if(UNIX)
-	set(FREETYPE_LIB_DIR build/${FREETYPE_DIR})
-elseif(WIN32)
-	set(FREETYPE_LIB_DIR build/${FREETYPE_DIR}/Debug)
-endif()
+set(FREETYPE_LIB_DIR build/${FREETYPE_DIR})
 add_subdirectory(${FREETYPE_DIR})
 target_include_directories(${PROJECT_NAME} PUBLIC ${FREETYPE_DIR}/include)
 target_link_directories(${PROJECT_NAME} PUBLIC ${FREETYPE_LIB_DIR})
