particle emitter sample improvement

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -102,6 +102,9 @@ if(BUILD_SAMPLES)
 	add_executable(shadowSample shadowSample.cpp)
 	target_link_libraries(shadowSample ${LIB_NAME})
 
+	add_executable(particleEmitterSample particleEmitterSample.cpp)
+	target_link_libraries(particleEmitterSample ${LIB_NAME})
+
 	add_executable(pbrSample pbrSample.cpp)
 	target_link_libraries(pbrSample ${LIB_NAME})
 endif()
