tests and samples are not built by default

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,8 +4,8 @@ project(vb01)
 set(CMAKE_BUILD_TYPE Debug)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread -pedantic")
 set(BUILD_SHARED_LIBS OFF)
-set(BUILD_TESTS ON)
-set(BUILD_SAMPLES ON)
+set(BUILD_TESTS OFF)
+set(BUILD_SAMPLES OFF)
 set(BUILD_WITH_ASSIMP OFF)
 set(LIB_NAME vb01)
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
