reading directories recusively when loading assets

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,8 @@ endif()
 
 set(LIB_SRC ${RENDER} ${MATH} ${UTILS} ${GUI} ${ARMATURE} ${ASSET_MANAGER} ${ASSET_READERS} ${ANIM})
 
+
+include_directories(external/tinydir)
 include_directories(external/glm)
 include_directories(external/glm/glm)
 include_directories(external/glad)
