--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "external/tinyxml2"]
 	path = external/tinyxml2
 	url = https://github.com/leethomason/tinyxml2
+[submodule "external/tinydir"]
+	path = external/tinydir
+	url = https://github.com/cxong/tinydir
