Added boost algorithm submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "external/tinydir"]
 	path = external/tinydir
 	url = https://github.com/cxong/tinydir
+[submodule "external/algorithm"]
+	path = external/algorithm
+	url = git@github.com:boostorg/algorithm.git
